# gql_codegen

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  SPEC.md  biome.json  cspell.json  document.graphql  justfile  lindy.graphql  notes.md  output.ts  rustc-ice-2025-09-01T18_00_04-62707.txt  schema.graphql  swapi.graphql
_src/: _main.rs  main.rs  visitor.rs
crates/gql_codegen_cli/: Cargo.toml  config.json  query.graphql  schema.d.ts  schema.graphql  schema2.d.ts
crates/gql_codegen_cli/fixtures/: codegen.json
crates/gql_codegen_cli/fixtures/.sgc/: cache.json
crates/gql_codegen_cli/fixtures/documents/: fragments.graphql  mutations.graphql  queries.graphql
crates/gql_codegen_cli/fixtures/schemas/: schema.graphql
crates/gql_codegen_cli/src/: args.rs  collector.rs  file.rs  generate.rs  get_read_results.rs  get_schema.rs  lib.rs  load_schema.rs  logger.rs  main.rs  path_parser.rs  scratch
crates/gql_codegen_cli/test_docs/: document.graphql  fragment.graphql  query.graphql  test.tsx  testFile.js  testFrag.js
crates/gql_codegen_cli/tests/: snapshots.rs
crates/gql_codegen_cli/tests/snapshots/: snapshots__documents_ts.snap  snapshots__documents_ts.snap.new  snapshots__schema_types_only.snap  snapshots__types_ts.snap
crates/gql_codegen_core/: Cargo.toml
crates/gql_codegen_core/fixtures/: codegen.json
crates/gql_codegen_core/fixtures/.sgc/: cache.json
crates/gql_codegen_core/fixtures/documents/: fragments.graphql  queries.graphql
crates/gql_codegen_core/fixtures/schemas/: base.graphql  invalid.graphql
crates/gql_codegen_core/src/: cache.rs  casing.rs  codegen.rs  config.rs  diagnostic.rs  documents.rs  error.rs  extract.rs  fs.rs  lib.rs  run_codegen.rs  runner.rs  schema.rs  source_cache.rs  test_utils.rs  timing.rs  validation.rs
crates/gql_codegen_core/src/cache/: fs.rs  glob_cache.rs  memory.rs  mod.rs  noop.rs  utils.rs
crates/gql_codegen_core/src/casing/: mod.rs  transforms.rs  words.rs
crates/gql_codegen_core/src/generators/: NOTES.md  document_transform.rs  documents.rs  mod.rs  typescript.rs  typescript_operations.rs
crates/gql_codegen_core/src/generators/common/: helpers.rs  list.rs  mod.rs  typename.rs
crates/gql_codegen_core/src/generators/operation_types/: field.rs  fragment.rs  mod.rs  operation.rs  selection.rs  variables.rs
crates/gql_codegen_core/src/generators/schema_types/: enum.rs  field.rs  input.rs  interface.rs  mod.rs  object.rs  operation_types.rs  scalar.rs  union.rs  variables.rs
crates/gql_codegen_core/src/generators/snapshots/: gql_codegen_core__generators__documents__tests__generate_documents_plain.snap  gql_codegen_core__generators__documents__tests__generate_documents_with_fragments.snap  gql_codegen_core__generators__documents__tests__generate_documents_with_gql_tag.snap  gql_codegen_core__generators__typescript__tests__generate_schema_types.snap  gql_codegen_core__generators__typescript__tests__generate_schema_types_immutable.snap  gql_codegen_core__generators__typescript__tests__generate_schema_types_with_enums_as_const.snap  gql_codegen_core__generators__typescript_operations__tests__generate_operation_types.snap  gql_codegen_core__generators__typescript_operations__tests__generate_operation_types_with_fragments.snap  gql_codegen_core__generators__typescript_operations__tests__generate_with_immutable_types.snap
crates/gql_codegen_core/src/generators/typescript/: base_types.rs  enum.rs  field.rs  helpers.rs  input.rs  interface.rs  mod.rs  object.rs  operation_types.rs  scalar.rs  scalars.rs  union.rs  utils.rs
crates/gql_codegen_core/src/generators/typescript_operations/: field.rs  fragment.rs  fragment_spread.rs  inline_fragment.rs  mod.rs  operation.rs  selection.rs  typename.rs  variables.rs
crates/gql_codegen_core/src/reader/: mod.rs
crates/gql_codegen_core/src/snapshots/: gql_codegen_core__diagnostic__tests__diagnostic_with_color.snap  gql_codegen_core__diagnostic__tests__render_config_error.snap
crates/gql_codegen_core/src/writer/: fs.rs  memory.rs  mod.rs  noop.rs  stdout.rs
crates/gql_codegen_core/tests/: diagnostics.rs  documents.rs  schema.rs
crates/gql_codegen_core/tests/compat/: diff-references.sh  generate-references.mjs  main.rs  package.json  pnpm-lock.yaml
crates/gql_codegen_core/tests/compat/snapshots/: compat__enums-default@enums-default.json.snap  compat__inputs-avoid-optionals-default-value@inputs-avoid-optionals-default-value.json.snap  compat__inputs-avoid-optionals-default-value@inputs-avoid-optionals-default-value.json.snap.new  compat__inputs-default@inputs-default.json.snap  compat__inputs-default@inputs-default.json.snap.new  compat__interfaces-default@interfaces-default.json.snap  compat__objects-default@objects-default.json.snap  compat__operations-default@operations-default.json.snap  compat__operations-with-fragments@operations-with-fragments.json.snap  (+2 more)
crates/gql_codegen_core/tests/fixtures/: codegen.json
crates/gql_codegen_core/tests/generators/: main.rs  typescript.rs
crates/gql_codegen_core/tests/snapshots/: diagnostics__config_parse_error.snap  diagnostics__document_warning_duplicate_name.snap  diagnostics__document_warning_parse_error.snap  diagnostics__schema_parse_error.snap  diagnostics__schema_validation_error.snap
crates/gql_codegen_generators/: Cargo.toml
crates/gql_codegen_generators/src/: common.rs  lib.rs  operation_tree.rs
crates/gql_codegen_generators/src/documents/: field_formatter.rs  mod.rs
crates/gql_codegen_generators/src/ts_operation_types/: mod.rs  operation_tree.rs
crates/gql_codegen_generators/src/ts_schema_types/: common.rs  generate_default_scalars.rs  generate_enum.rs  generate_input_object.rs  generate_interface.rs  generate_object.rs  generate_scalar.rs  generate_union.rs  helpers.rs  mod.rs
crates/gql_codegen_napi/: Cargo.toml  example-cached.mjs  example.mjs  index.d.ts  index.js  package-lock.json  package.json
crates/gql_codegen_napi/src/: lib.rs
crates/gql_codegen_types/: Cargo.toml
crates/gql_codegen_types/src/: lib.rs
crates/gql_codegen_wasm/: Cargo.toml
crates/gql_codegen_wasm/src/: lib.rs
(+228 files in other folders)
