[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
authors = ["Ryan Walker <ryan.matthew.walker@gmail.com>"]
name = "gql_codegen"
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
gql_codegen_cli = { path = "crates/gql_codegen_cli" }
gql_codegen_config = { path = "crates/gql_codegen_config" }
gql_codegen_js = { path = "crates/gql_codegen_js" }
gql_codegen_errors = { path = "crates/gql_codegen_errors" }
gql_codegen_types = { path = "crates/gql_codegen_types" }
gql_codegen_generators = { path = "crates/gql_codegen_generators" }

apollo-compiler = { version = "1.28.0" }
apollo-parser = { version = "0.8.4" }
clap = { version = "4.5.20", features = ["derive"] }
glob = { version = "0.3.2" }
indexmap = { version = "2.6.0" }
oxc = { version = "0.66.0", features = ["full"] }
rayon = { version = "1.10.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.128" }
thiserror = { version = "2.0.12" }
