[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
authors = ["Ryan Walker <ryan.matthew.walker@gmail.com>"]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
gql_codegen_cli = { path = "crates/gql_codegen_cli" }
gql_codegen_core = { path = "crates/gql_codegen_core" }

apollo-compiler = { version = "1.31.0" }
ariadne = { version = "0.5" }
apollo-parser = { version = "0.8.4" }
clap = { version = "4.5.56", features = ["derive"] }
globset = { version = "0.4.18" }
indexmap = { version = "2.13.0" }
rayon = { version = "1.11.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.149" }
thiserror = { version = "2.0.18" }
schemars = { version = "0.8" }
anyhow = { version = "1.0.100" }
walkdir = { version = "2.5.0" }
glob = { version = "0.3.2" }
