[package]
name = "gql_codegen_cli"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gql_codegen_config = { workspace = true }
gql_codegen_js = { workspace = true }
gql_codegen_errors = { workspace = true }
gql_codegen_formatter = { workspace = true }
gql_codegen_types = { workspace = true }
gql_codegen_generators = { workspace = true }
gql_codegen_logger = { workspace = true }

apollo-compiler = { workspace = true }
apollo-parser = { workspace = true }
clap = { workspace = true }
glob = { workspace = true }
oxc = { workspace = true }
rayon = { workspace = true }
anyhow = { workspace = true }
globset = { workspace = true }
walkdir = { workspace = true }
indexmap = { workspace = true }
