[package]
name = "gql_codegen_cli"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "gql-codegen"
path = "src/main.rs"

[dependencies]
gql_codegen_core = { path = "../gql_codegen_core" }

clap = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
