[package]
name = "gql_codegen_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core GraphQL code generation library"

[dependencies]
# GraphQL parsing
apollo-compiler.workspace = true

# Serialization (for receiving config from Node)
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true

# File handling
glob.workspace = true
globset.workspace = true

# Parallelism
rayon.workspace = true

# Data structures
indexmap.workspace = true

# Error handling
thiserror.workspace = true

# Cross-platform time (works on WASM)
web-time = "1.1"

[dev-dependencies]
insta = { version = "1.46.3", features = ["glob"] }
strip-ansi-escapes = "0.2.1"
