[package]
name = "gql_codegen_napi"
version = "0.1.0"
edition = "2021"
description = "NAPI bindings for gql_codegen - native Node.js module"

[lib]
crate-type = ["cdylib"]

[dependencies]
gql_codegen_core = { path = "../gql_codegen_core" }
napi = { version = "2", default-features = false, features = ["napi4", "tokio_rt"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
