[package]
name = "gql_codegen_types"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
gql_codegen_formatter = { workspace = true }
gql_codegen_logger = { workspace = true }

apollo-compiler = { workspace = true }
indexmap = { workspace = true }
